Pruebas unitarias orden, nested, ciclo de vida y test parametrizados